# example-mongodb

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yaml
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: UserController.hpp
src/db/: Database.cpp  Database.hpp  Model.hpp
src/dto/: DTOs.hpp
utility/: install-oatpp-modules.sh
